@@ -1,5 +1,6 @@
     ADDED: winning icons, SVGs and fixed code to use them
     ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced later
+    FIXED: [ 1351641 ] Krusader 1.70.0-beta2 on Sparc/Solaris: checksumdlg.h
     FIXED: terminal emulator saves its size from now
     FIXED: hiding the full size terminal emulator cannot restore the panels
     FIXED: terminal emulator has no focus after toggling it on
